♻️(site) Integration and content touchups (#383)
* Add metadesc and update publish date

* WIP Codecademy post

* WIP Stats update for decimals in stats

* Allow decimals in stats

* Update app name, hero, tags

* Update featuring logic

Current logic left us featuring older case studies. We may revisit after we get a more regular case study cadence

* Fix media pulling the right images for stories landing page

* Have featured story use media instead of images array

* Add tag normalization

This ensures that similiar tags, and tags across languages, can be normalized into the english words used asset lookup

* Give all blog posts a blog tag

This also aligns how case studies are tagged, reducing the differences, allowing some template cleanup

* Update Spanish news and stories

Removed circle modifier from news landing page, remvoed featured images from Asphalt so it falls back to just the hero

* Separate changing theme from updating display

Allows for better control and more _magic_

* Add optional theme properties for post

* Pull theme and hero into post hero

Theme will also override eyebrow and icon in cards

Hero gets overlaid on top of background for hero and featured items

* Remove heros from existing posts

None of the existing posts' heros align with current designs, so removing them

* Add hero and theme for Crostini post

* Update article layout

* Remove block margin for inline date-time

* Update article footer styling

* Clean up attributed quote

* Add ix transforms for srcset

* Allow post background images to change

* Update post with top and bottom backgrounds

* Add image swapping to hero

* Add definitions for theme to posts

* Small tweaks to Phosphor

Adding missing components, making sure text is readable, filling inline SVGs

* Make sure a stringified undefined isn't returned

* Remove poster addition for GIFs as it forces a full download of the GIF, defeating the 

--- a/site/_components/card.njk
+++ b/site/_components/card.njk
@@ -20,7 +20,9 @@
 <a href="{{ data.url }}" class="card type--base {{styles}} {{'card--source' if data.source is defined}} {{'card--cta' if cta}}" aria-labelledby="{{ titleId }} {{ bodyId}} {{ sourceId }}">
   <article class="card__container">
     <header id="{{ titleId }}" class="card__title">
-      {% if data.eyebrow %} {% set tagSlug = data.eyebrow | slugify %} {{icon(tagSlug, 'card__topic')}}
+      {% if data.eyebrow %} {% if data.icon %}
+      <img src="{{data.icon}}" alt="" class="card__topic icon" aria-hidden="true" />
+      {% else %} {% set tagSlug = data.eyebrow | normalizeTag | slugify %} {{icon(tagSlug, 'card__topic')}} {% endif %}
       <small class="card__eyebrow type--eyebrow">{{ data.eyebrow }}</small>
       {% endif %}
       <h4 class="card__heading type--h4">{{ data.title }}</h4>
