--- a/site/sass/components/_hero-article.scss
+++ b/site/sass/components/_hero-article.scss
@@ -5,11 +5,17 @@
   $content-max-width: 100rem;
 
   overflow: hidden;
+  padding-bottom: 15vh;
   position: relative;
   width: 100%;
 
+  @include mq(750px) {
+    padding-bottom: 0;
+  }
+
   &__back {
-    background-color: var(--white);
+    background-color: var(--hero-theme-background, var(--white));
+    color: var(--hero-theme-color, inherit);
     margin: 0 auto;
     max-width: $content-max-width;
     padding-bottom: clamp(1rem, 6vw, 2.5rem);
@@ -30,33 +36,39 @@
   }
 
   &__images {
-    align-items: center;
+    align-items: flex-end;
+    bottom: 0;
     display: flex;
-    height: 30vh;
-    justify-content: center;
-    margin-top: -20vh;
-    position: relative;
+    height: 100%;
+    justify-content: flex-end;
+    margin-top: 0;
+    padding-right: 3rem;
+    position: absolute;
+    right: 0;
+    width: 58vw;
 
     @include mq(750px) {
-      bottom: 0;
-      height: 100%;
-      margin-top: unset;
-      position: absolute;
-      right: 0;
-      width: 58vw;
-      z-index: 0;
+      align-items: center;
     }
 
     &--background-pattern {
-      display: block;
-      height: 100%;
-      margin-left: auto;
+      bottom: 0;
+      max-height: 100%;
+      position: absolute;
+      right: 0;
 
       @include mq(750px) {
-        bottom: 0;
-        position: absolute;
-        right: 0;
+        height: 100%;
       }
+    }
+
+    &--hero {
+      height: auto;
+      max-height: 15vh;
+      max-width: 30vw;
+
+      width: auto;
+      z-index: 1;
     }
   }
 
@@ -85,7 +97,7 @@
 
   &__stories {
     &--background-color {
-      background-color: var(--primary-blue);
+      background-color: var(--blue-700);
     }
 
     &--content {
