Add light background wrapper

--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -57,5 +57,5 @@ hideNewsletter: true
   <div class="wrapper wrapper--padding wrapper--padded wrapper--full-bleed wrapper__background--dark">{{ callOut(l10n.newsletter.subscribe.content, l10n.newsletter.subscribe.cta) }}</div>
 
   <!-- Footnotes -->
-  <footer class="wrapper wrapper--full-bleed wrapper__background wrapper--no-bottom wrapper--no-top wrapper--padded wrapper__contained">{{ footnotes(l10n.home.footnotes.notes) }}</footer>
+  <footer class="wrapper wrapper--full-bleed wrapper__background wrapper__background--light wrapper--no-bottom wrapper--no-top wrapper--padded wrapper__contained">{{ footnotes(l10n.home.footnotes.notes) }}</footer>
 </div>
