--- a/site/sass/components/_wrapper.scss
+++ b/site/sass/components/_wrapper.scss
@@ -196,6 +196,10 @@
       }
     }
 
+    &--light {
+      background-color: var(--grey-50);
+    }
+
     &--dark {
       background-color: var(--grey-850);
     }
