update bg pattern path

--- a/site/_layouts/tech-detail.njk
+++ b/site/_layouts/tech-detail.njk
@@ -12,7 +12,7 @@ layout: _wrapper
     <h1 class="tech-detail__hero-title type--mega">{{title}}</h1>
     {%- if hero -%}
     <div class="tech-detail__hero-image">
-      <img class="tech-detail__hero-image--background-pattern" src="{{hero.image}}" alt="{{hero.alt}}" />
+      <img class="tech-detail__hero-image--background-pattern" src="{{hero.image}}" alt="" aria-hidden="true" />
     </div>
     {%- endif -%}
   </div>
