--- a/site/_layouts/tech-detail.njk
+++ b/site/_layouts/tech-detail.njk
@@ -2,7 +2,7 @@
 layout: _wrapper
 ---
 
-{% from 'skip-link.njk' import skipLink %} {% from 'toc.njk' import toc as tableOfContents %} {% from 'tools.njk' import tools as toolsMacro %} {% from 'subnav.njk' import subnav %} {% from 'resources.njk' import resources as resourcesMacro %} {% from 'item-grid.njk' import itemGrid %} {% set class="tech-detail" %} {% if landingPage %} {% set class = "tech-detail tech-detail--landing" %} {% endif %}
+{% from 'skip-link.njk' import skipLink %} {% from 'back-to-top.njk' import backToTop %} {% from 'toc.njk' import toc as tableOfContents %} {% from 'tools.njk' import tools as toolsMacro %} {% from 'subnav.njk' import subnav %} {% from 'resources.njk' import resources as resourcesMacro %} {% from 'item-grid.njk' import itemGrid %} {% set class="tech-detail" %} {% if landingPage %} {% set class = "tech-detail tech-detail--landing" %} {% endif %}
 
 <article class="{{class}} {{section}}">
   {% set related = collections[section + '--' + locale.code] %}
@@ -33,9 +33,7 @@ layout: _wrapper
     <div class="tech-detail__chapters">{{itemGrid(microcopy.landing.chapters, landingPage.subnav.slice(1))}}</div>
     {% endif %}
   </section>
-
-  {% if landingPage == false %}
-  <section class="tech-detail__recommended wrapper--padding wrapper--padded wrapper__contained">{{itemGrid(microcopy.recommended, title | related(locale.code, page.url))}}</section>
-  {% endif %}
 </article>
-{% from 'back-to-top.njk' import backToTop %} {{ backToTop() }}
+{% if landingPage == false %}
+<section class="tech-detail__recommended wrapper wrapper--padding wrapper--padded wrapper--full-bleed wrapper__contained wrapper__background">{{itemGrid(microcopy.recommended, title | related(locale.code, page.url))}}</section>
+{% endif %} {{ backToTop() }}
