--- a/site/_components/stories-section.njk
+++ b/site/_components/stories-section.njk
@@ -8,7 +8,7 @@
 {% from 'icon.njk' import icon %} {% from 'stories-card.njk' import storiesCard %} {% macro storiesSection(titles, items) %} {% for title in titles %} {% for tag, item in items | groupby("tag") %} {% if title.tag == tag %}
 
 <header class="item-grid__header">
-  {{ icon(title.tag, 'item-grid__icon') }}
+  <img src="ix://icons/eyebrows/{{title.tag | normalizeTag | slugify}}.svg" alt="" class="item-grid__icon icon" aria-hidden="true" />
   <h2 class="item-grid__title type--h2">{{title.title}}</h2>
 </header>
 {% if title.subtitle %}
