--- a/site/_components/card.njk
+++ b/site/_components/card.njk
@@ -22,7 +22,7 @@
     <header id="{{ titleId }}" class="card__title">
       {% if data.eyebrow %} {% if data.icon %}
       <img src="{{data.icon}}" alt="" class="card__topic icon" aria-hidden="true" />
-      {% else %} {% set tagSlug = data.eyebrow | normalizeTag | slugify %} {{icon(tagSlug, 'card__topic')}} {% endif %}
+      {% else %} {% set tagSlug = data.eyebrow | normalizeTag | slugify %} <img src="ix://icons/eyebrows/{{tagSlug}}.svg" alt="" class="card__topic icon" aria-hidden="true" /> {% endif %}
       <small class="card__eyebrow type--eyebrow">{{ data.eyebrow }}</small>
       {% endif %}
       <h4 class="card__heading type--h4">{{ data.title }}</h4>
