--- a/site/_components/hero.njk
+++ b/site/_components/hero.njk
@@ -12,13 +12,13 @@
   @param {string} content.cta.url: String representing the CTA url.
   @param {string} content.cta.text: String representing the CTA text.
  #}-->
-{% from 'icon.njk' import icon %} {% macro hero(content) -%} {% set tagSlug = content.normalizedTag | slugify %}
+{% macro hero(content) -%} {% set tagSlug = content.normalizedTag | slugify %}
 <article class="hero {% if content.theme.theme %}hero--theme__{{content.theme.theme}}{% elif content.tag %}background-color--{{tagSlug}}{% endif %}">
   <div class="wrapper--padded hero__content">
     <div class="hero__content-wrapper">
       {% if content.theme.icon %}
       <img src="{{content.theme.icon}}" alt="" class="hero__icon icon" aria-hidden="true" />
-      {% elif content.tag %} {{icon(tagSlug, 'hero__icon')}} {% endif %}
+      {% elif content.tag %} <img src="ix://icons/eyebrows/{{tagSlug}}.svg" alt="" class="hero-hero__icon icon" aria-hidden="true" /> {% endif %}
       <small class="hero__eyebrow type--eyebrow">{{content.eyebrow}}</small>
       <h1 class="hero__title type--h1">{{content.title}}</h1>
 
