--- a/site/sass/layouts/_tech-detail.scss
+++ b/site/sass/layouts/_tech-detail.scss
@@ -63,15 +63,11 @@
         align-items: center;
         display: flex;
         justify-content: center;
-        padding-bottom: 0;
-        padding-right: 0;
-        padding-top: 0;
       }
     }
 
     &-image {
       display: flex;
-      height: 25vh;
       justify-content: flex-end;
       padding-left: 2rem;
 
@@ -82,6 +78,11 @@
 
       @include mq($bkpt-tech-details--3-cols) {
         max-height: 40vh;
+      }
+
+      &--background-pattern {
+        height: 100%;
+        object-fit: cover;
       }
     }
 
