Make cta focus bkg for m100 theme transparent

--- a/site/sass/components/_hero.scss
+++ b/site/sass/components/_hero.scss
@@ -103,7 +103,7 @@
       }
 
       .cta:focus {
-        background-color: var(--blue-900);
+        background-color: transparent;
       }
     }
   }
