--- a/site/sass/layouts/_tech-detail.scss
+++ b/site/sass/layouts/_tech-detail.scss
@@ -172,9 +172,9 @@
 
       > .subnav {
         margin-bottom: -1px;
-        max-height: calc(100vh - 4rem - 1px);
+        max-height: calc(100vh - 5rem - 1px);
         overflow-y: auto;
-        padding-bottom: 0;
+        padding-bottom: 1rem;
         padding-top: $block-padding;
         position: sticky;
         top: 4rem;
