--- a/site/_components/topics.njk
+++ b/site/_components/topics.njk
@@ -3,15 +3,16 @@
 
   @param {string} label - A label for the list of topics.
   @param {string[]} items - A list of topics.
-  @param {string} localeCode - 
+  @param {string} localeCode - Locale code
+  @param {boolean} [ignoreFirst] - Whether to ignore the first item in the list.
  #}-->
-{% macro topics(label, items, localeCode) -%}
+{% macro topics(label, items, localeCode, ignoreFirst = true) -%}
 <section class="topics">
   <h5 class="topics__label type--label">{{label}}</h5>
   <ul class="topics__list">
-    {% for topic in items -%}
-    <li class="topics__item type--small"><a class="type--link" href="/{{localeCode}}/search?q={{ topic }}&field=tag&locale={{localeCode}}">{{ topic }}{{ ',' if not loop.last }}</a></li>
-    {%- endfor %}
+    {% for topic in items -%} {% if ignoreFirst and loop.index0 == 0 %} {% else %}
+    <li class="topics__item type--small"><a class="type--link" href="/{{localeCode}}/search?q={{ topic }}&field=tags&locale={{localeCode}}">{{ topic }}{{ ',' if not loop.last }}</a></li>
+    {% endif %} {%- endfor %}
   </ul>
 </section>
 {%- endmacro %}
