Fix Apple Touch Icon href

--- a/site/_layouts/_wrapper.njk
+++ b/site/_layouts/_wrapper.njk
@@ -9,7 +9,7 @@
     <meta name="Description" content="{{ metadesc }}" />
     <meta name="theme-color" content="#1a73e8" />
     <link rel="icon" type="image/png" href="ix://icons/favicon.png" />
-    <link rel="apple-touch-icon" href="ix://icons/pwa/icon-192x192.png" />
+    <link rel="apple-touch-icon" href="/images/icons/pwa/icon-192x192.png" />
 
     {% for prop in og %}
     <meta property="og:{{prop.property}}" content="{{prop.content}}" />
