--- a/site/sass/components/_pre.scss
+++ b/site/sass/components/_pre.scss
@@ -34,6 +34,7 @@
 pre {
   @extend %base--pre;
   background: var(--grey-900);
+  max-width: calc(100vw - 4rem);
 
   > code {
     color: var(--grey-50);
