--- a/site/_components/author.njk
+++ b/site/_components/author.njk
@@ -15,7 +15,7 @@
 {% macro author(author, alt, contribid) -%}
 <figure class="author">
   {% set imagePath = 'contributors/' + contribid + '.jpg' %}
-  <img src="ix://{{imagePath}}" class="author__photo" alt="" />
+  <img src="ix://{{imagePath}}" class="author__photo" alt="" sizes="50px" />
   <figcaption class="author__copy">
     <p class="type--h6">{{author.name | name}}</p>
     {% if author.work | role %}
