🐛(site) Fix contributor headshots for blog posts (#434)
* Add Venus blog post

* Capitalize Venus in title

* Fix innaccessible heading colors

* Reintroduce author pictures

* Remove missing images from HTML

This will prevent broken images from showing up on the site

* Set sizes

--- a/site/_components/author.njk
+++ b/site/_components/author.njk
@@ -14,9 +14,8 @@
  #}-->
 {% macro author(author, alt, contribid) -%}
 <figure class="author">
-  {% set imagePath = 'contributors/' + contribid + '.jpg' %} {% if imagePath | existingImage %}
-  <img src="ix://{{imagePath}}" class="author__photo" alt="{{alt}}" />
-  {% endif %}
+  {% set imagePath = 'contributors/' + contribid + '.jpg' %}
+  <img src="ix://{{imagePath}}" class="author__photo" alt="" sizes="50px" />
   <figcaption class="author__copy">
     <p class="type--h6">{{author.name | name}}</p>
     {% if author.work | role %}
