Fix disabled button styling

--- a/site/sass/globals/extends/_cta.scss
+++ b/site/sass/globals/extends/_cta.scss
@@ -48,13 +48,13 @@
     border: 1px solid var(--blue-700);
     color: var(--white);
 
-    &:hover,
-    &:active {
+    &:not([disabled]):hover,
+    &:not([disabled]):active {
       background-color: var(--secondary-blue);
       border-color: var(--secondary-blue);
     }
 
-    &:focus-visible {
+    &:not([disabled]):focus-visible {
       outline: var(--red-650) solid 2px;
       outline-offset: 2px;
     }
