--- a/site/sass/components/_form.scss
+++ b/site/sass/components/_form.scss
@@ -62,6 +62,11 @@
     }
   }
 
+  &__button[disabled] {
+    cursor: not-allowed;
+    opacity: 50%;
+  }
+
   &--disabled & {
     &__item,
     &__disclaimer,
