Migrate themes to stand-alone component
They're used a few places and instead of piling them into the 'hero' component, make them stand-alone to make it easier to find and change

--- a/site/_components/hero-article.njk
+++ b/site/_components/hero-article.njk
@@ -15,7 +15,7 @@
 <article
   class="hero-article {% if section == 'posts' %}
   {% if theme and theme.theme %}
-    hero--theme__{{theme.theme}}
+    theme theme__{{theme.theme}}
   {% else %}
     background-color--{{tagSlug}}
   {% endif %}
