--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -96,6 +96,9 @@
 @import 'components/featured-story';
 @import 'components/stories-card';
 
+// Component themes
+@import 'components/themes';
+
 // Page Layouts
 @import 'layouts/tech-detail';
 @import 'layouts/article';
