--- a/site/sass/components/_wrapper.scss
+++ b/site/sass/components/_wrapper.scss
@@ -1,146 +1,125 @@
 // Styles for landing pages.
 //
 // Customizations.
-// On wider screens (width > $content-max-width) if you have a component with a
+// On wider screens (width > $wrapper-content-max-width) if you have a component with a
 // full-bleed background use --alter-background-color to set it.
 
 @use 'sass:math';
 
 .wrapper {
-  $content-max-width: pxRem(1600px);
-
-  $max-width: 1440px;
-  $scaler: math.div(math.div($max-width, 100), 1vw);
-
-  $block-spacing-s: 8.25rem;
-  $block-spacing-l: 10.5rem;
-  $inline-spacing-s: 1.5rem;
-  $inline-spacing-l: 5rem;
-
-  $bumper-s: 0.875rem;
-  $bumper-l: 1.25rem;
-
-  $block-spacing-m: math.div(($block-spacing-l + $block-spacing-s), 2);
-  $inline-spacing-m: math.div(($inline-spacing-l + $inline-spacing-s), 2);
-  $bumper-m: math.div(($bumper-l + $bumper-s), 2);
-
   $this: #{&};
 
-  $block-spacing-r: clamp($block-spacing-s, (math.div($block-spacing-l, 1rem) * math.div(16px, $scaler)), $block-spacing-l);
-  $inline-spacing-r: clamp($inline-spacing-s, (math.div($inline-spacing-l, 1rem) * math.div(16px, $scaler)), $inline-spacing-l);
-  $bumper-r: clamp($bumper-s, (math.div($bumper-l, 1rem) * math.div(16px, $scaler)), $bumper-l);
-
   height: auto;
-  margin: math.div($block-spacing-m, 2) auto;
-  max-width: $content-max-width;
+  margin: math.div($wrapper-block-spacing-m, 2) auto;
+  max-width: $wrapper-content-max-width;
 
   @supports (margin: clamp(1px, 1vw, 2px)) {
-    margin: calc(#{$block-spacing-r} / 2) auto;
+    margin: calc(#{$wrapper-block-spacing-r} / 2) auto;
   }
 
   &--padding {
     margin-bottom: 0;
     margin-top: 0;
-    padding-bottom: math.div($block-spacing-m, 2);
-    padding-top: math.div($block-spacing-m, 2);
+    padding-bottom: math.div($wrapper-block-spacing-m, 2);
+    padding-top: math.div($wrapper-block-spacing-m, 2);
 
     @supports (padding: clamp(1px, 1vw, 2px)) {
-      padding-bottom: calc(#{$block-spacing-r} / 2);
-      padding-top: calc(#{$block-spacing-r} / 2);
+      padding-bottom: calc(#{$wrapper-block-spacing-r} / 2);
+      padding-top: calc(#{$wrapper-block-spacing-r} / 2);
     }
   }
 
   &--padded {
-    padding-left: $inline-spacing-m;
-    padding-right: $inline-spacing-m;
+    padding-left: $wrapper-inline-spacing-m;
+    padding-right: $wrapper-inline-spacing-m;
 
     @supports (margin: clamp(1px, 1vw, 2px)) {
-      padding-left: $inline-spacing-r;
-      padding-right: $inline-spacing-r;
+      padding-left: $wrapper-inline-spacing-r;
+      padding-right: $wrapper-inline-spacing-r;
     }
   }
 
   &__contained > * {
     margin: 0 auto;
-    max-width: $max-width;
+    max-width: $wrapper-max-width;
   }
 
   &--rhythm > *:not(:last-child) {
-    margin-bottom: $block-spacing-m;
+    margin-bottom: $wrapper-block-spacing-m;
 
     @supports (margin: clamp(1px, 1vw, 2px)) {
-      margin-bottom: $block-spacing-r;
+      margin-bottom: $wrapper-block-spacing-r;
     }
   }
 
   &--full-top {
-    margin-top: $block-spacing-m;
+    margin-top: $wrapper-block-spacing-m;
 
     @supports (margin: clamp(1px, 1vw, 2px)) {
-      margin-top: $block-spacing-r;
+      margin-top: $wrapper-block-spacing-r;
     }
 
     &#{$this}--padding {
       margin-top: 0;
-      padding-top: $block-spacing-m;
+      padding-top: $wrapper-block-spacing-m;
 
       @supports (padding: clamp(1px, 1vw, 2px)) {
         margin-top: 0;
-        padding-top: $block-spacing-r;
+        padding-top: $wrapper-block-spacing-r;
       }
     }
   }
 
   &--full-bottom {
-    margin-bottom: $block-spacing-m;
+    margin-bottom: $wrapper-block-spacing-m;
 
     @supports (margin: clamp(1px, 1vw, 2px)) {
-      margin-bottom: $block-spacing-r;
+      margin-bottom: $wrapper-block-spacing-r;
     }
 
     &#{$this}--padding {
       margin-bottom: 0;
-      padding-bottom: $block-spacing-m;
+      padding-bottom: $wrapper-block-spacing-m;
 
       @supports (padding: clamp(1px, 1vw, 2px)) {
         margin-bottom: 0;
-        padding-bottom: $block-spacing-r;
+        padding-bottom: $wrapper-block-spacing-r;
       }
     }
   }
 
   &--bumper-top {
-    margin-top: $bumper-m + math.div($block-spacing-m, 2);
+    margin-top: $wrapper-bumper-m + math.div($wrapper-block-spacing-m, 2);
 
     @supports (margin: clamp(1px, 1vw, 2px)) {
-      margin-top: calc(#{$bumper-r} + #{$block-spacing-r} / 2);
+      margin-top: calc(#{$wrapper-bumper-r} + #{$wrapper-block-spacing-r} / 2);
     }
 
     &#{$this}--padding {
       margin-top: 0;
-      padding-top: $bumper-m + math.div($block-spacing-m, 2);
+      padding-top: $wrapper-bumper-m + math.div($wrapper-block-spacing-m, 2);
 
       @supports (padding: clamp(1px, 1vw, 2px)) {
         margin-top: 0;
-        padding-top: calc(#{$bumper-r} + #{$block-spacing-r} / 2);
+        padding-top: calc(#{$wrapper-bumper-r} + #{$wrapper-block-spacing-r} / 2);
       }
     }
   }
 
   &--bumper-bottom {
-    margin-bottom: $bumper-m + math.div($block-spacing-m, 2);
+    margin-bottom: $wrapper-bumper-m + math.div($wrapper-block-spacing-m, 2);
 
     @supports (margin: clamp(1px, 1vw, 2px)) {
-      margin-bottom: calc(#{$bumper-r} + #{$block-spacing-r} / 2);
+      margin-bottom: calc(#{$wrapper-bumper-r} + #{$wrapper-block-spacing-r} / 2);
     }
 
     &#{$this}--padding {
       margin-bottom: 0;
-      padding-bottom: $bumper-m + math.div($block-spacing-m, 2);
+      padding-bottom: $wrapper-bumper-m + math.div($wrapper-block-spacing-m, 2);
 
       @supports (padding: clamp(1px, 1vw, 2px)) {
         margin-bottom: 0;
-        padding-bottom: calc(#{$bumper-r} + #{$block-spacing-r} / 2);
+        padding-bottom: calc(#{$wrapper-bumper-r} + #{$wrapper-block-spacing-r} / 2);
       }
     }
   }
@@ -237,7 +216,7 @@
     $circle-l: 150px;
     $circle-m: math.div(($circle-l + $circle-s), 2);
 
-    $medium: math.div($circle-m, (math.div(math.div($circle-l, $scaler), 100vw)));
+    $medium: math.div($circle-m, (math.div(math.div($circle-l, $wrapper-scaler), 100vw)));
 
     --circle-radius: #{$circle-s};
     --circle-offset: -50;
@@ -246,7 +225,7 @@
       --circle-radius: #{$circle-m};
     }
 
-    @include mq($max-width) {
+    @include mq($wrapper-max-width) {
       --circle-radius: #{$circle-l};
       --circle-offset: 0;
     }
