--- a/site/sass/globals/_vars.scss
+++ b/site/sass/globals/_vars.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 // Global variables.
 // Module settings
 $breakpoint: (
@@ -40,3 +41,25 @@ $bkpt-map--header--large: (
 //Landings
 $content-max-width: pxRem(1440px);
 $bkpt-landing--large: 1024px;
+
+// Wrapper
+$wrapper-content-max-width: pxRem(1600px);
+
+$wrapper-max-width: 1440px;
+$wrapper-scaler: math.div(math.div($wrapper-max-width, 100), 1vw);
+
+$wrapper-block-spacing-s: 8.25rem;
+$wrapper-block-spacing-l: 10.5rem;
+$wrapper-inline-spacing-s: 1.5rem;
+$wrapper-inline-spacing-l: 5rem;
+
+$wrapper-bumper-s: 0.875rem;
+$wrapper-bumper-l: 1.25rem;
+
+$wrapper-block-spacing-m: math.div(($wrapper-block-spacing-l + $wrapper-block-spacing-s), 2);
+$wrapper-inline-spacing-m: math.div(($wrapper-inline-spacing-l + $wrapper-inline-spacing-s), 2);
+$wrapper-bumper-m: math.div(($wrapper-bumper-l + $wrapper-bumper-s), 2);
+
+$wrapper-block-spacing-r: clamp($wrapper-block-spacing-s, (math.div($wrapper-block-spacing-l, 1rem) * math.div(16px, $wrapper-scaler)), $wrapper-block-spacing-l);
+$wrapper-inline-spacing-r: clamp($wrapper-inline-spacing-s, (math.div($wrapper-inline-spacing-l, 1rem) * math.div(16px, $wrapper-scaler)), $wrapper-inline-spacing-l);
+$wrapper-bumper-r: clamp($wrapper-bumper-s, (math.div($wrapper-bumper-l, 1rem) * math.div(16px, $wrapper-scaler)), $wrapper-bumper-l);
